# parole

./: Cargo.toml  README.md
src/: app.rs  lib.rs  main.rs
src/annotation/: textgrid.rs
src/audio/: encoder.rs  loader.rs  mod.rs  player.rs  recorder.rs
src/dsp/: formants.rs  job.rs  mod.rs  pitch.rs  spectrogram.rs
src/ui/: help.rs  mod.rs  settings.rs  spectrogram.rs  toolbar.rs  waveform.rs
tests/: dsp_pipeline.rs
