[package]
name = "praatly"
version = "0.1.0"
edition = "2021"
description = "A modern phonetic analysis workbench — Praat with better UX"
license = "MIT"

[[bin]]
name = "praatly"
path = "src/main.rs"

[dependencies]
eframe = "0.27"
egui = "0.27"
cpal = "0.15"
symphonia = { version = "0.5", features = ["mp3", "flac", "wav"] }
rustfft = "6.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mlua = { version = "0.9", features = ["lua54", "vendored"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
parking_lot = "0.12"
rfd = "0.14"

[profile.release]
opt-level = 3
lto = true
